<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToyStory">


    <ImageView
        android:id="@+id/juguetes"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:foreground="@color/imageForeground"
        android:scaleType="centerCrop"
        android:src="@drawable/toy_story"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/portada"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:src="@drawable/cover_page"
        app:layout_constraintBottom_toTopOf="@+id/guideH2"
        app:layout_constraintEnd_toStartOf="@+id/guideV2"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="@+id/guideV1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872" />

    <TextView
        android:id="@+id/Toy_StoryTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/toy_story"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideH2"
        app:layout_constraintEnd_toStartOf="@+id/guideV2"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="@+id/guideV1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />

    <TextView
        android:id="@+id/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/juan_18_2010"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideH2"
        app:layout_constraintEnd_toStartOf="@+id/guideV2"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="@+id/guideV1"
        app:layout_constraintTop_toBottomOf="@+id/Toy_StoryTxt"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <Button
        android:id="@+id/button"
        android:layout_width="130dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:text="@string/rent_from_24_99"

        app:layout_constraintBottom_toTopOf="@+id/guideH3"
        app:layout_constraintStart_toStartOf="@+id/guideV1"
        app:layout_constraintTop_toTopOf="@+id/guideH2"
        app:layout_constraintVertical_bias="0.444" />

    <Button
        android:layout_width="130dp"
        android:layout_height="64dp"
        android:text="@string/buy_from_44_99"
        app:layout_constraintBottom_toTopOf="@+id/guideH3"
        app:layout_constraintEnd_toStartOf="@+id/guideV2"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/guideH2"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:layout_width="313dp"
        android:layout_height="122dp"
        android:text="@string/reseña"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideV2"
        app:layout_constraintStart_toStartOf="@+id/guideV1"
        app:layout_constraintTop_toTopOf="@+id/guideH3"
        app:layout_constraintVertical_bias="0.151" />

</androidx.constraintlayout.widget.ConstraintLayout>