<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/doctorimage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/doctor"
        android:scaleType="centerCrop"
        android:foreground="@color/imageForeground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <ImageButton
        android:id="@+id/contactBtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/rounded_button"
        android:src="@drawable/baseline_account_circle_24"
        app:layout_constraintBottom_toTopOf="@id/guideV2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/guideV1"
        app:layout_constraintTop_toBottomOf="@+id/guideH1"
        app:layout_constraintVertical_bias="0" />

    <ImageButton
        android:id="@+id/appointmentBtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:background="@drawable/rounded_button"
        android:src="@drawable/baseline_calendar_month_24"
        app:layout_constraintBottom_toTopOf="@id/guideH2"
        app:layout_constraintEnd_toStartOf="@+id/guideV2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/contactBtn"
        app:layout_constraintTop_toBottomOf="@id/guideH1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_juan"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guideV2"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/guideV1"
        app:layout_constraintTop_toBottomOf="@id/guideH2" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/book"
        app:layout_constraintStart_toEndOf="@id/guideV1"
        app:layout_constraintEnd_toStartOf="@id/guideV2"
        app:layout_constraintBottom_toBottomOf="@id/doctorimage"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintHorizontal_bias="0"
        />

    <TextView
        android:id="@+id/ourServicesTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/our_services"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guideV2"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/guideV1"
        app:layout_constraintTop_toBottomOf="@id/doctorimage" />

<LinearLayout
    app:layout_constraintBottom_toTopOf="@id/guideH3"
    android:id="@+id/hospitallayouty"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/ourServicesTxt"
    app:layout_constraintStart_toEndOf="@id/guideV1"
    app:layout_constraintEnd_toStartOf="@+id/abulancelayout"
    >
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/baseline_business_24"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hospital"/>

</LinearLayout>



    <LinearLayout
        app:layout_constraintBottom_toTopOf="@id/guideH3"
        android:id="@+id/abulancelayout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ourServicesTxt"
        app:layout_constraintStart_toEndOf="@id/hospitallayouty"
        app:layout_constraintEnd_toStartOf="@id/apoitmentlayout"
        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/baseline_local_car_wash_24"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ambulancia"/>

    </LinearLayout>

    <LinearLayout
        app:layout_constraintBottom_toTopOf="@id/guideH3"
        android:id="@+id/apoitmentlayout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ourServicesTxt"
        app:layout_constraintStart_toEndOf="@id/abulancelayout"
        app:layout_constraintEnd_toStartOf="@id/guideV2"

        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/outline_playlist_add_check_circle_24"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Appointments"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appoitmentTxt"
        android:text="Appointments"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/guideH3"
        app:layout_constraintStart_toEndOf="@id/guideV1"
        app:layout_constraintEnd_toStartOf="@id/guideV2"
        app:layout_constraintHorizontal_bias="0"/>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guideV1"
        app:layout_constraintEnd_toStartOf="@id/guideV2"
        app:layout_constraintTop_toBottomOf="@+id/appoitmentTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Appointment date"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Thu Feb 22 - 19:00 - 20:00"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Appointment date"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Thu Feb 22 - 19:00 - 20:00"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Appointment date"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Thu Feb 22 - 19:00 - 20:00"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>